--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
     <main>
         <div class="container">
             <div class="hero">
-                <div class="banner__bg">
+                <div class="hero__bg">
                     <img class="img-fluid" src="./img/hero.png" width="1920" height="770" alt="">
                 </div>
                 <div class="hero__content">
