--- a/src/index.html
+++ b/src/index.html
@@ -144,10 +144,59 @@
                     </div>
                 </div>
             </section>
-
             <section class="collection">
                 <div class="container">
+                    <div class="collection__title">FEATURED Unfinished FLOORING</div>
+                    <div class="tabs">
+                        <ul class="tabs__caption">
+                            <li class="active">LÉGER</li>
+                            <li>NATUREL</li>
+                            <li>GRIS ARGENT</li>
+                        </ul>
 
+                        <div class="tabs__content active">
+                            <div class="collection__item">
+                                <div class="collection__content">
+                                    <div class="collection__name">Monet Collection</div>
+                                    <p class="collection__text">Inspired by the paintings of renowned French painter Monet, we have come up with a collection of flooring that’s is
+                                    appealing to the eye just likes his masterpieces. This series consists of light natural colour to present an earthy
+                                    perception for your home.</p>
+                                    <a href="#" class="btn btn-outline-secondary">EXPLORE THE MONET COLLECTION</a>
+                                </div>
+                                <div class="collection__figure">
+                                    <img class="img-fluid" src="./img/collection.png" width="960" height="721" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tabs__content">
+                            <div class="collection__item">
+                                <div class="collection__content">
+                                    <div class="collection__name">NATUREL</div>
+                                    <p class="collection__text">Inspired by the paintings of renowned French painter Monet, we have come up with a collection of flooring that’s is
+                                        appealing to the eye just likes his masterpieces. This series consists of light natural colour to present an earthy
+                                        perception for your home.</p>
+                                    <a href="#" class="btn btn-outline-secondary">EXPLORE THE MONET COLLECTION</a>
+                                </div>
+                                <div class="collection__figure">
+                                    <img class="img-fluid" src="./img/solid-img.jpg" width="960" height="721" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tabs__content">
+                            <div class="collection__item">
+                                <div class="collection__content">
+                                    <div class="collection__name">GRIS ARGENT</div>
+                                    <p class="collection__text">Inspired by the paintings of renowned French painter Monet, we have come up with a collection of flooring that’s is
+                                        appealing to the eye just likes his masterpieces. This series consists of light natural colour to present an earthy
+                                        perception for your home.</p>
+                                    <a href="#" class="btn btn-outline-secondary">EXPLORE THE MONET COLLECTION</a>
+                                </div>
+                                <div class="collection__figure">
+                                    <img class="img-fluid" src="./img/Reclaimed-img.jpg" width="960" height="721" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
 
