--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
 
 <body>
 <div class="wrp">
+    <div id="to-top" class="to-top"></div>
     <div class="wrp__overlay"></div>
     @@include('./template/_header.html')
     <main>
