--- a/src/catalog-section.html
+++ b/src/catalog-section.html
@@ -24,6 +24,9 @@
                 <div class="hero__bg">
                     <img class="img-fluid" src="./img/hero-catalog.png" width="1920" height="350" alt="">
                 </div>
+                <div class="hero__content">
+                    <h1 class="hero__title">Catalog</h1>
+                </div>
             </div>
 
             <div class="catalog-section">
