--- a/src/collection.html
+++ b/src/collection.html
@@ -24,6 +24,9 @@
                 <div class="hero__bg">
                     <img class="img-fluid" src="./img/hero-collection.png" width="1920" height="700" alt="">
                 </div>
+                <div class="hero__content">
+                    <h1 class="hero__title">Collection</h1>
+                </div>
             </div>
 
             <section class="collection-section">
