--- a/src/detail.html
+++ b/src/detail.html
@@ -17,7 +17,7 @@
 <div class="wrp">
     <div id="to-top" class="to-top"></div>
     <div class="wrp__overlay"></div>
-    @@include('./template/_header.html')
+    @@include('./template/_header.html', { scroll: "scroll" })
     <main>
         <div class="container">
             <div class="detail">
@@ -88,7 +88,7 @@
                             <a href="#" class="btn btn-primary">Download PDF</a>
                         </div>
                         <div class="detail__share">
-
+                            <div class="ya-share2" data-services="vkontakte,twitter,whatsapp, telegram" data-color-scheme="whiteblack"></div>
                         </div>
                     </div>
                 </div>
@@ -101,6 +101,7 @@
 
 <!-- JS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://yastatic.net/share2/share.js" async></script>
 <script src="js/volkewood.js"></script>
 
 </body>
