--- a/src/detail.html
+++ b/src/detail.html
@@ -17,7 +17,7 @@
 <div class="wrp">
     <div id="to-top" class="to-top"></div>
     <div class="wrp__overlay"></div>
-    @@include('./template/_header.html', { scroll: "scroll" })
+    @@include('./template/_header.html', { detail: "inner" })
     <main>
         <div class="container">
             <div class="detail">
@@ -83,7 +83,7 @@
                             </div>
                         </div>
 
-                        <div>
+                        <div class="detail__btns">
                             <a href="#" class="btn btn-primary">Request a Sample</a>
                             <a href="#" class="btn btn-primary">Download PDF</a>
                         </div>
