--- a/src/detail.html
+++ b/src/detail.html
@@ -14,10 +14,10 @@
 </head>
 
 <body>
-<div class="wrp">
+<div class="wrp detail-page">
     <div id="to-top" class="to-top"></div>
     <div class="wrp__overlay"></div>
-    @@include('./template/_header.html', { detail: "inner" })
+    @@include('./template/_header.html', { detail: "inner1" })
     <main>
         <div class="container">
             <div class="detail">
